--- a/app/index.html
+++ b/app/index.html
@@ -46,9 +46,20 @@
             Passport Number:</br>
             <input type="number" name="Passport" value="" placeholder="">
             Phone Number: </br>
-            <input type="number" name="Phone" value="" placeholder="Phone Nr">
+            <input type="tel" name="Phone" value="" placeholder="Phone Nr">
             Company Name: </br>
             <input type="text" name="Company" value="" placeholder="Company Name">
+
+            <div id="creditCard">
+              Credit Card Number:</br>
+              <input type="number" name="cardNr" value="">
+              Expiration Year:</br>
+              <input type="number" name="exYear" value="">
+              Expiration Month:</br>
+              <input type="number" name="exMnth" value="">
+              Cardholder Name:</br>
+              <input type="text" name="cardHolder" value="" placeholder="John Doe">
+            </div>
             <button type="button" id="submit" name="submit">Register</button>
           </form>
       </div>
@@ -264,24 +275,28 @@
       sGender = $(".gender").find("input:checked").val(),
       sPassport = $("input[name='Passport']").val(),
       sPhone = $("input[name='Phone']").val(),
-      sCompany = $("input[name='Company']").val();
+      sCompany = $("input[name='Company']").val(),
+      nCardNr = $("input[name='cardNr']").val(),
+      nExMnth = $("input[name='exMnth']").val(),
+      nExYear = $("input[name='exYear']").val(),
+      sCardHolder = $("input[name='cardHolder']").val();
 
       var userjson =  {"user": {
                           "credentials": {
                             "firstName": sFirstName,
                             "lastName": sLastname,
                             "email": sMail,
-                            "sPassword": sPassword,
+                            "password": sPassword,
                             "bday": sBday,
                             "title": sGender,
                             "PassNr": sPassport,
                             "phone": sPhone,
                             "CompanyName": sCompany,
                             "creditCard": {
-                              "cardNr": 89142894712,
-                              "exMnth": 12,
-                              "exDay": 23,
-                              "cardHolder": sFirstName+" "+sLastname
+                              "cardNr": nCardNr,
+                              "exMnth": nExMnth,
+                              "exYear": nExYear,
+                              "cardHolder": sCardHolder
                               }
                              }
                             }
@@ -290,13 +305,15 @@
       // var data = JSON.stringify( $(".register").serializeArray());
       var data = JSON.stringify(userjson);
 
+      console.log(data);
+
       localStorage.setItem("user", data);
 
     })
     $("#login").click(function () {
       var formData = $.parseJSON(localStorage.user),
-          mail = formData[2].value,
-          pass = formData[3].value,
+          mail = formData.user.credentials.email,
+          pass = formData.user.credentials.password,
           inputMail = $("input[name='loginMail']").val(),
           inputPass = $("input[name='loginPass']").val();
 
