--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
   <body>
     <div id="search-bar">
       <div class="login">
-        <a href="">Login</a>
-        <a href="">Register</a>
+        <a href="" class="regular-button">Login</a>
+        <a href="" class="regular-button">Register</a>
       </div>
       <form class="" action="index.html" method="post">
         <div class="">
@@ -21,7 +21,7 @@
           <input type="date" name="toDate" value="">
           <input type="number" name="passengers" value="">
         </div>
-        <button type="button" name="submit" id="goSearch">Go!</button>
+        <button class="regular-button" type="button" name="submit" id="goSearch">Go!</button>
       </form>
     </div>
     <div class="content">
@@ -30,27 +30,27 @@
           <div class="destinations">
             <span class="prev-from">AMS</span> -> <span class="prev-to">CPH</span>
           </div>
-          <div>
-            <input type="text">
-            <input type="text">
-            <button type="button" name="submit">Go!</button>
+          <div class="previous-search">
+            <input type="date">
+            <input type="date">
+            <button class="regular-button" type="button" name="submit">Search</button>
           </div>
         </div>
         <div class="prevFlight card" data-flight-destination="xx">
           <div class="destinations">BRN -> LND</div>
-          <div>
-            <input type="text">
-            <input type="text">
-            <button type="button" name="submit">Go!</button>
+          <div class="previous-search">
+            <input type="date">
+            <input type="date">
+            <button class="regular-button" type="button" name="submit">Search</button>
           </div>
         </div>
       </div>
       	<div class="search-result hidden">
       		<div class="results">
-      			<div class="filters card">
-      				<div class="filter" id="quick"><p>Quickest</p></div>
+      			<div class="filters">
+      				<div class="filter card" id="quick"><p>Quickest</p></div>
       				<div class="filter" id="cheap"><p>Cheapest</p></div>
-      				<div class="filter" id="best"><p>Best</p></div>
+      				<div class="filter card" id="best"><p>Best</p></div>
       			</div>
             <div class="search-card card">
               <div class="result-box">
@@ -73,7 +73,7 @@
 
         				<div class="price-box">
         					<p>40 EUR</p>
-        					<button>BOOK NOW</button>
+        					<button class="regular-button">BOOK NOW</button>
         				</div>
         			</div>
         			<div class="further-info-button">
@@ -115,7 +115,7 @@
       				</div>
       				<div class="price-box">
       					<p>42 EUR</p>
-      					<button>BOOK NOW</button>
+      					<button class="regular-button">BOOK NOW</button>
       				</div>
       			</div>
       			<div class="further-info-button">
