--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="content">
       <!-- REGISTER IN  -->
-      <div id="register" class="hidden">
+      <div id="register" class="card hidden">
         <h3>REGISTER</h3>
           <form class="register" action="index.html" method="post">
             First name:</br>
@@ -63,19 +63,19 @@
               Cardholder Name:</br>
               <input type="text" name="cardHolder" value="" placeholder="John Doe">
             </div>
-            <button type="button" id="submit" name="submit">Register</button>
+            <div type="button" id="submit" class="regular-button" name="submit">Register</div>
           </form>
       </div>
       <!-- REGISTER OUT -->
       <!-- LOGIN IN -->
-      <div id="LoginContainer" class="hidden">
+      <div id="LoginContainer" class="card hidden">
         <h3>LOGIN</h3>
         <form class="login">
           Email:
           <input type="email" name="loginMail" value="" placeholder="John@doe.com">
           Password:
           <input type="Password" name="loginPass" value="">
-          <button type="button" id="login" value="login" name="button">login</button>
+          <div type="button" id="login" class="regular-button" value="login" name="button">login</div>
         </form>
       </div>
       <!-- LOGIN OUT -->
