--- a/app/index.html
+++ b/app/index.html
@@ -18,11 +18,11 @@
 
       <form class="" action="index.html" method="post">
         <div class="">
-          <input class="from" type="text" name="from" value="" maxlength="10">
-          <input class="to" type="text" name="to" value="" maxlength="10">
+          <input class="from" type="text" name="from" value="Copenhagen" maxlength="10">
+          <input class="to" type="text" name="to" value="Berlin" maxlength="10">
           <input type="date" name="fromDate" value="">
           <input type="date" name="toDate" value="">
-          <input type="number" name="passengers" value="">
+          <input type="number" name="passengers" value="1">
         </div>
         <button class="regular-button" type="button" name="submit" id="goSearch">Go!</button>
       </form>
