--- a/app/book.html
+++ b/app/book.html
@@ -5,17 +5,26 @@
     <title>book your flight</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <input type="text" class="title" name="" value="" placeholder="Title">
-    <input type="text" class="name" name="" value="" placeholder="Name">
-    <input type="text" class="lastname" name="" value="" placeholder="Lastname">
-    <input type="text" class="email" name="" value="" placeholder="Email">
-    <input type="text" class="company" name="" value="" placeholder="Company">
-    <input type="text" class="birthday" name="" value="" placeholder="Birthday">
-    <input type="text" class="phone" name="" value="" placeholder="Phone">
-    <input type="text" class="passport" name="" value="" placeholder="Passport Number">
-    
+    <div class="booking-wrapper">
+      <div class="booking-information card">
+        <p>BOOKING INFORMATION</p>
+        <input type="text" class="title" name="" value="" placeholder="Title">
+        <input type="text" class="name" name="" value="" placeholder="Name">
+        <input type="text" class="lastname" name="" value="" placeholder="Lastname">
+        <input type="text" class="email" name="" value="" placeholder="Email">
+        <input type="text" class="company" name="" value="" placeholder="Company">
+        <input type="text" class="birthday" name="" value="" placeholder="Birthday">
+        <input type="text" class="phone" name="" value="" placeholder="Phone">
+        <input type="text" class="passport" name="" value="" placeholder="Passport Number">
+        <a href="payment.html"><div class="regular-button">BOOK</div></a>
+      </div>
+    </div>
+
+
 
     <script type="text/javascript">
       $(document).ready(function(){
