--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="search-bar">
@@ -17,12 +18,13 @@
       <form class="" action="index.html" method="post">
         <div class="">
           <input class="from" type="text" name="from" value="" maxlength="10">
-          <input class="to" type="text" name="to" value="" maxlength="10">
+          <input class="to" type="text" name="to" value="">
           <input type="date" name="fromDate" value="">
           <input type="date" name="toDate" value="">
           <input type="number" name="passengers" value="">
+          <button class="regular-button" type="button" name="submit" id="goSearch">Go!</button>
         </div>
-        <button class="regular-button" type="button" name="submit" id="goSearch">Go!</button>
+
       </form>
     </div>
     <div class="content">
@@ -80,7 +82,7 @@
       <div class="previousFlights">
         <div class="prevFlight card" data-flight-destination="xx">
           <div class="destinations">
-            <span class="prev-from">AMS</span> -> <span class="prev-to">CPH</span>
+            <span class="prev-from">AMS</span> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> <span class="prev-to">CPH</span>
           </div>
           <div class="previous-search">
             <input type="date">
@@ -89,7 +91,7 @@
           </div>
         </div>
         <div class="prevFlight card" data-flight-destination="xx">
-          <div class="destinations">BRN -> LND</div>
+          <div class="destinations">BRN <i class="fa fa-long-arrow-right" aria-hidden="true"></i> LND</div>
           <div class="previous-search">
             <input type="date">
             <input type="date">
@@ -110,14 +112,14 @@
         					<div class="info">
         						<p>11:45</p>
         						<p class="result-from">CPH</p>
-        						<div class="line"></div>
+        						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
         						<p class="result-to">TLX</p>
         						<p>12:50</p>
         					</div>
         					<div class="info">
         						<p>08:00</p>
         						<p class="result-to">TXL</p>
-        						<div class="line"></div>
+        						<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
         						<p class="result-from">CPH</p>
         						<p>09:05</p>
         					</div>
@@ -133,16 +135,17 @@
         					</div>
         			<div class="further-info-box">
         				<div class="options">
-        					<p>Public transport</p>
+        					<p class="option-header">Public transport</p>
         					<div class="transport-info">
+                    <input type="checkbox">
         						<p>TXL</p>
-        						<div></div>
-        						<p>your adress..</p>
+        						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+        						<p>Alexanderplatz 22</p>
         					</div>
         				</div>
         				<div class="options">
-        					<p>Taxi</p>
-        					<p>Approximately 20 min by taxi</p>
+        					<p class="option-header">Taxi</p>
+        					<div><input type="checkbox"><p>Approximately 20 min by taxi</p></div>
         				</div>
         			</div>
             </div>
@@ -153,7 +156,7 @@
       					<div class="info">
       						<p>13:45</p>
       						<p class="result-from">CPH</p>
-      						<div class="line"></div>
+      						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
       						<p class="result-to">TLX</p>
       						<p>14:50</p>
       					</div>
@@ -224,6 +227,7 @@
         var to = $(".to").val().toUpperCase();
 
         if (from != "" && to != ""){
+
           $(".search-result").removeClass("hidden");
           $(".previousFlights").addClass("hidden");
 
@@ -233,34 +237,33 @@
           $(".result-to").empty();
           $(".result-to").append(to);
 
+          if (to == "ALEXANDERPLATZ 22") {
+              var infoToAppend = '<div class="options">\
+                <p class="option-header">Public transport</p>\
+                <div class="transport-info">\
+                  <input type="checkbox">\
+                  <p>TXL</p>\
+                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>\
+                  <p>Alexanderplatz 22</p>\
+                </div>\
+              </div>\
+              <div class="options">\
+                <p class="option-header">Taxi</p>\
+                <div><input type="checkbox"><p>Approximately 20 min by taxi</p></div>\
+              </div>'
+
+              $(".further-info-box").empty();
+              $(".further-info-box").append(infoToAppend);
+          } else {
+              $(".further-info-box").empty();
+              $(".further-info-box").append('<p class="need-adress">Search for an adress to see more information</p>');
+          }
+
           localStorage.removeItem(lastSearch);
 
           var lastSearch = {"from":from, "to":to};
           localSearch = JSON.stringify(lastSearch);
           localStorage.lastSearch = localSearch;
-
-          var userjson =  {"user": {
-                          		"credentials": {
-                          			"firstName": "bob",
-                          			"lastName": "Egon",
-                          			"email": "john@doe.com",
-                          			"bday": "1999-20-12",
-                          			"title": "Ms",
-                          			"PassNr": "983235523",
-                          			"phone": "123213",
-                          			"CompanyName": "Limited Incorporated A/S",
-                          			"creditCard": {
-                          				"cardNr": 89142894712,
-                          				"exMnth": 12,
-                          				"exDay": 23,
-                          				"cardHolder": "Bob Egon"
-                                  }
-  		                           }
-  	                            }
-                              }
-
-          localUser = JSON.stringify(userjson)
-          localStorage.user = localUser;
         }
 
 
