--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/bce7f6c050.js"></script>
     <script src="../node_modules/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../node_modules/sweetalert/dist/sweetalert.css">
   </head>
@@ -16,12 +16,11 @@
         <button class="btnLogin regular-button">Login</button>
         <button class="btnRegister regular-button">Register</button>
       </div>
-
       <form class="" action="index.html" method="post">
         <div class="">
           <input class="from" type="text" name="from" value="Copenhagen" maxlength="10">
           <i class="fa fa-arrows-h" aria-hidden="true"></i>
-          <input class="to" type="text" name="to" value="Berlin">
+          <input class="to" type="text" name="to" value="Berlin" maxlength="10">
           <i class="fa fa-calendar" aria-hidden="true"></i>
           <input type="date" name="fromDate" value="">
           <i class="fa fa-calendar" aria-hidden="true"></i>
@@ -87,7 +86,7 @@
       <div class="previousFlights">
         <div class="prevFlight card" data-flight-destination="xx">
           <div class="destinations">
-            <span class="prev-from">AMS</span> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> <span class="prev-to">CPH</span>
+            <span class="prev-from">AMS</span> -> <span class="prev-to">CPH</span>
           </div>
           <div class="previous-search">
             <input type="date">
@@ -96,7 +95,7 @@
           </div>
         </div>
         <div class="prevFlight card" data-flight-destination="xx">
-          <div class="destinations">BRN <i class="fa fa-long-arrow-right" aria-hidden="true"></i> LND</div>
+          <div class="destinations">BRN -> LND</div>
           <div class="previous-search">
             <input type="date">
             <input type="date">
@@ -117,14 +116,14 @@
         					<div class="info">
         						<p>11:45</p>
         						<p class="result-from">CPH</p>
-        						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+        						<div class="line"></div>
         						<p class="result-to">TLX</p>
         						<p>12:50</p>
         					</div>
         					<div class="info">
         						<p>08:00</p>
         						<p class="result-to">TXL</p>
-        						<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+        						<div class="line"></div>
         						<p class="result-from">CPH</p>
         						<p>09:05</p>
         					</div>
@@ -140,17 +139,16 @@
         					</div>
         			<div class="further-info-box">
         				<div class="options">
-        					<p class="option-header">Public transport</p>
+        					<p>Public transport</p>
         					<div class="transport-info">
-                    <input type="checkbox">
         						<p>TXL</p>
-        						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-        						<p>Alexanderplatz 22</p>
+        						<div></div>
+        						<p>your adress..</p>
         					</div>
         				</div>
         				<div class="options">
-        					<p class="option-header">Taxi</p>
-        					<div><input type="checkbox"><p>Approximately 20 min by taxi</p></div>
+        					<p>Taxi</p>
+        					<p>Approximately 20 min by taxi</p>
         				</div>
         			</div>
             </div>
@@ -161,7 +159,7 @@
       					<div class="info">
       						<p>13:45</p>
       						<p class="result-from">CPH</p>
-      						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+      						<div class="line"></div>
       						<p class="result-to">TLX</p>
       						<p>14:50</p>
       					</div>
@@ -232,7 +230,6 @@
         var to = $(".to").val().toUpperCase();
 
         if (from != "" && to != ""){
-
           $(".search-result").removeClass("hidden");
           $(".previousFlights").addClass("hidden");
 
@@ -242,33 +239,34 @@
           $(".result-to").empty();
           $(".result-to").append(to);
 
-          if (to == "ALEXANDERPLATZ 22") {
-              var infoToAppend = '<div class="options">\
-                <p class="option-header">Public transport</p>\
-                <div class="transport-info">\
-                  <input type="checkbox">\
-                  <p>TXL</p>\
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>\
-                  <p>Alexanderplatz 22</p>\
-                </div>\
-              </div>\
-              <div class="options">\
-                <p class="option-header">Taxi</p>\
-                <div><input type="checkbox"><p>Approximately 20 min by taxi</p></div>\
-              </div>'
-
-              $(".further-info-box").empty();
-              $(".further-info-box").append(infoToAppend);
-          } else {
-              $(".further-info-box").empty();
-              $(".further-info-box").append('<p class="need-adress">Search for an adress to see more information</p>');
-          }
-
           localStorage.removeItem(lastSearch);
 
           var lastSearch = {"from":from, "to":to};
           localSearch = JSON.stringify(lastSearch);
           localStorage.lastSearch = localSearch;
+
+          var userjson =  {"user": {
+                          		"credentials": {
+                          			"firstName": "bob",
+                          			"lastName": "Egon",
+                          			"email": "john@doe.com",
+                          			"bday": "1999-20-12",
+                          			"title": "Ms",
+                          			"PassNr": "983235523",
+                          			"phone": "123213",
+                          			"CompanyName": "Limited Incorporated A/S",
+                          			"creditCard": {
+                          				"cardNr": 89142894712,
+                          				"exMnth": 12,
+                          				"exDay": 23,
+                          				"cardHolder": "Bob Egon"
+                                  }
+  		                           }
+  	                            }
+                              }
+
+          localUser = JSON.stringify(userjson)
+          localStorage.user = localUser;
         }
 
 
