--- a/app/payment.html
+++ b/app/payment.html
@@ -52,7 +52,7 @@
         $(".cardholder-name").val(creditcardInfo.cardHolder)
         $(".card-number").val(creditcardInfo.cardNr)
         $(".exp-month").val(creditcardInfo.exMnth)
-        $(".exp-year").val(creditcardInfo.exDay)
+        $(".exp-year").val(creditcardInfo.exYear)
       }
     })
 </script>
