Responsive Account Details

--- a/app/index.html
+++ b/app/index.html
@@ -73,16 +73,17 @@
               Company Name: </br>
               <input type="text" name="Company" value="" placeholder="Company Name">
               <div id="creditCard">
-                Credit Card Number:</br>
-                <input type="number" name="cardNr" value="">
-                Expiration Year:</br>
-                <input type="number" name="exYear" value="">
-                Expiration Month:</br>
-                <input type="number" name="exMnth" value="">
-                Cardholder Name:</br>
-                <input type="text" name="cardHolder" value="" placeholder="John Doe">
+                <h3>Payment</h3>
+                Credit Card Number:
+                <input type="number" name="cardNr" value=""></br>
+                Expiration Year:
+                <input type="number" name="exYear" value=""></br>
+                Expiration Month:
+                <input type="number" name="exMnth" value=""></br>
+                Cardholder Name:
+                <input type="text" name="cardHolder" value="" placeholder="John Doe"></br>
               </div>
-              <div type="button" id="submit" class="regular-button" name="submit">Register</div>
+              <div type="button" id="submit" class="overlaybtn regular-button" name="submit">Register</div>
             </form>
         </div>
       </section>
@@ -96,7 +97,7 @@
               <input type="email" name="loginMail" value="" placeholder="Email">
               <input type="Password" name="loginPass" value="" placeholder="Password">
             </span>
-            <div type="button" id="login" class="regular-button" value="login" name="button">login</div>
+            <div type="button" id="login" class="overlaybtn regular-button" value="login" name="button">login</div>
           </form>
         </div>
       </section>
